# Raytracing

./: .gitignore  11.2.ppm  README.md  camera.h  lookat0_0_-05.ppm  main_s10.cc  synthesis.cc
NextWeek/: .gitignore  CMakeCache.txt  CMakeLists.txt  CPU.cpp  CPU.h  CodeMap1.dgml  CompShader.cpp  CompShader.h  Device.cpp  Device.h  Entity.h  Makefile  NextWeek.sln  NextWeek.vcxproj  NextWeek.vcxproj.filters  ONB.cpp  ONB.h  README.md  Window.cpp  Window.h  aaa.cc  avgTest.h  bbb.txt  camera.h  cc.sh  cmake_install.cmake  color.h  common.cpp  common.h  compTest.comp  cornell.ppm  ft.sh  gl_camera.h  gmake.sh  imaage.ppm  image.ppm  imgui.ini  main  main.cc  makefile  (+27 more)
NextWeek/haha/: new  new.cc
NextWeek/hit/: aabb.cpp  aabb.h  aarect.cpp  aarect.h  box.cpp  box.h  bvh.cpp  bvh.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  moving_sphere.h  perlin.h  sphere.cpp  sphere.h  texture.h
NextWeek/images/: session2.ppm
NextWeek/material/: material.h
NextWeek/scene/: scene.cpp  scene.h
NextWeek/util/: jobSystem.cc  jobSystem.h  time  timer.h
NextWeek/vec3/: ray.cpp  ray.h  vec3.cpp  vec3.h
RayTracingInOneWeek/: CMakeCache.txt  CMakeLists.txt  Makefile  aa.ppm  camera.h  cmake_install.cmake  color.h  image.ppm  main.sh  main_s10  main_s9.cc  randomScene  rtweekend.h  ssb.cc  synthesis  synthesis.cc  test.ppm
RayTracingInOneWeek/hit/: hittable.h  hittable_list.h  sphere.h
RayTracingInOneWeek/image/: 100depth.ppm  8_3_gamma.ppm  8_5_unitVec.ppm  8_6_hemi.ppm  high.ppm  s10_3_noReflact.ppm  s10_4_Schlick.ppm  s12_defocus_blur_10apt.ppm  (+3 more)
(+8 files in other folders)
